--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -5,13 +5,13 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v2.3.2
-    
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.0.0
-      with:
-        server: ftp.ramerion.com
-        username: resong@staging-resonghotel.metrosoftware.id
-        password: Resong123*
-        server-dir: /home/n1577433/resong-hotel/
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v2.3.2
+
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: ftp.ramerion.com
+          username: resong@staging-resonghotel.metrosoftware.id
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /home/n1577433/resong-hotel/
